2019-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 3.8.0 RC1

2018-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Note pdk14 and pdk15 support.

2018-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Add date line to 3.7.0 and 3.8.0 release news.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 3.8.0 release.

2018-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 3.8.0 RC1

2018-03-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* left_menu.inc:
	  Point link to new wiki.

2018-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDC 3.7.0 release.

2018-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: added News - sdcc 3.7.0 RC2

2018-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: long long is supported everywhere except for pic.

2016-11-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* index.php: Update Ben Shi's responsibility.

2016-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 release
	* previous.php: moved 3.5.0 release items

2016-06-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 RC2

2016-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: Update standards and data types.

2016-05-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 RC1

2015-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  Reorganize link sections, add STM8 links.
	* index.php: Update my entry inthe "Who" section.

2015-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  Remove dead links.

2015-06-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: removed 3.4.0 dedication to Borut Razem

2015-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.5.0 release