@@ -1,3 +1,8 @@
+2019-04-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php:
+	  Added News - SDCC 3.9.0 release.
+
 2019-04-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php:
